@@ -236,6 +236,7 @@ To insert a signature file automatically, call the function
     ("application"
      ("octet-stream" ("type" "" "tar" "shar"))
      ("postscript")
+     ("pdf")
      ("msword")
      ("vnd.ms-excel")
      ("vnd.ms-powerpoint")
@@ -341,7 +342,12 @@ To insert a signature file automatically, call the function
      )
     ("\\.ps$"
      "application" "postscript"	nil
-     "quoted-printable"
+     "base64"
+     "attachment"	(("filename" . file))
+     )
+    ("\\.pdf$"
+     "application" "pdf"	nil
+     "base64"
      "attachment"	(("filename" . file))
      )
 
